WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
61371
Some repeating linear gradients look wrong
https://bugs.webkit.org/show_bug.cgi?id=61371
Summary
Some repeating linear gradients look wrong
Simon Fraser (smfr)
Reported
2011-05-24 10:36:45 PDT
This gradient renders incorrectly: red -webkit-repeating-linear-gradient(0deg, black 150px, green 175px, white 200px)
Attachments
Patch
(25.92 KB, patch)
2011-05-25 21:11 PDT
,
Simon Fraser (smfr)
aroben
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2011-05-25 21:11:22 PDT
Created
attachment 94913
[details]
Patch
Simon Fraser (smfr)
Comment 2
2011-05-26 08:57:07 PDT
http://trac.webkit.org/changeset/87389
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug